--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
 <style>
   * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Orbitron', sans-serif; }
-  body { background: #111; color: #eee; min-height: 100vh; display: flex; justify-content: center; align-items: center; flex-direction: column; }
+  body { background: #111; color: #eee; min-height: 100vh; display: flex; justify-content: center; align-items: center; flex-direction: column; user-select: none; }
   h1 { margin-bottom: 20px; text-align: center; color: #fff; text-shadow: 0 0 10px #aaa; }
 
   .btn { 
@@ -20,6 +20,7 @@
     cursor: pointer; 
     border-radius: 10px;
     transition: all 0.3s ease;
+    user-select: none;
   }
   .btn:hover { background: #333; transform: scale(1.05); border-color: #aaa; }
 
@@ -53,6 +54,10 @@
     justify-content: center;
     font-size: 24px;
     transition: all 0.2s ease;
+    user-select: none; /* Disable text selection */
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
   }
   #clickSurface:hover, #spaceSurface:hover { background: #333; }
 
@@ -173,7 +178,7 @@
   });
 
   function showClickResult(){
-    // Dynamic animals based on real speed and click thresholds
+    // Dynamic animals based on click count
     let animal = '';
     if(clickCount <= 10) animal = 'a snail';
     else if(clickCount <= 20) animal = 'a turtle';
